# experimental-ext-interceptors

./: .gitignore  README.md
.githooks/: pre-commit
.github/workflows/: csharp.yml  go.yml  python.yml  status-check.yml
csharp/sdk/: AGENTS.md  CLAUDE.md  ModelContextProtocol.Interceptors.sln  README.md  TODO.md
csharp/sdk/docs/: ARCHITECTURE_PHASES.md
csharp/sdk/samples/AvatarMoodInterceptorSample/: AvatarInterceptors.cs  AvatarMoodInterceptorSample.csproj  AvatarRenderer.cs  AvatarState.cs  MoodClassifier.cs  Program.cs
csharp/sdk/samples/ConfigDrivenGatewaySample/: ConfigDrivenGatewaySample.csproj  Program.cs  mcp-interceptors.json
csharp/sdk/samples/GatewayChainSample/: Program.cs
csharp/sdk/samples/GatewaySample/: GatewaySample.csproj  Program.cs
csharp/sdk/samples/InterceptorClientSample/: ClientMutationInterceptors.cs  ClientObservabilityInterceptors.cs  ClientValidationInterceptors.cs  Program.cs
csharp/sdk/samples/InterceptorLlmSample/: InterceptorLlmSample.csproj  LlmMutationInterceptors.cs  LlmObservabilityInterceptors.cs  LlmValidationInterceptors.cs  Program.cs
csharp/sdk/samples/InterceptorServerSample/: InterceptorServerSample.csproj  Program.cs  SampleInterceptors.cs  ServerLlmInterceptors.cs  ServerMutationInterceptors.cs  ServerObservabilityInterceptors.cs  ServerValidationInterceptors.cs
csharp/sdk/src/Common/: Throw.cs
docs/: sep.md
go/sdk/: README.md  go.mod
go/sdk/doc/: CONFORMANCE.md  DESIGN.md  PERFORMANCE.md
go/sdk/interceptors/: doc.go  interceptor.go  interceptor_test.go  priority.go  wire.go
python/sdk/: README.md  pyproject.toml
python/sdk/src/mcp_ext_interceptors/: __init__.py  interceptor.py
python/sdk/tests/: __init__.py  test_interceptors.py
typescript/sdk/: .eslintrc.json  README.md  package-lock.json  package.json  vitest.config.js
typescript/sdk/docs/: design-and-implementation.md
typescript/sdk/src/: index.ts  interceptors.test.ts  interceptors.ts
(+177 files in other folders)
